adicionaei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quisquam, cum laborum itaque id explicabo totam deleniti, placeat a nihil non numquam! Consectetur rem saepe perferendis fugiat sapiente similique sequi?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi distinctio nesciunt natus culpa in magnam dolore labore quasi odio alias illo obcaecati, molestias non eum? Sapiente tempore magnam temporibus omnis?</p>
 </body>
 </html>
